# gntlisp

./: Makefile.am  autogen.sh  config.h.patch  configure.ac
include/: config.lcl.in  config.lh.in  gntlisp.h  maindefs.h
include/gntlisp/: gntlisp.h
include/gntrepl/: gntrepl-main.h
src/: lexer.l  lisp-scanner.l  main.c  version.c
src/gntlisp/: gntlisp-parser.y  gntlisp-scanner.l  gntlisp.c  gntlisp.lcl
src/gntrepl/: gntrepl_main.c  gntrepl_main.lcl
tests/: testdefs.sh.in
tests/splint/: 000.sh.in
tests/valgrind/: 000.sh.in
